Added custom class to `PaginatedTable` dropdown

--- a/dl4se-website/src/assets/styles/component/_paginated-table.sass
+++ b/dl4se-website/src/assets/styles/component/_paginated-table.sass
@@ -36,6 +36,10 @@
   @include fixed-width(40)
   @extend .paginated-table-btn
 
+.paginated-table-dropdown
+  @include min-width(80)
+  @extend .mb-3
+
 .paginated-table-border
   @extend .border-secondary
   @extend .border-bottom
