Added variables for muted colors

--- a/dl4se-website/src/assets/styles/component/_config-table.sass
+++ b/dl4se-website/src/assets/styles/component/_config-table.sass
@@ -52,5 +52,5 @@
 .config-table-btn:disabled,
 .config-table-btn.disabled
   opacity: 1
-  color: rgb(108 117 125 / 50%)
-  background-color: rgb(230 230 230 / 50%)
+  color: $normal-gray-muted
+  background-color: $light-gray-muted
