--- a/dl4se-website/src/assets/styles/override/_custom-control-input.sass
+++ b/dl4se-website/src/assets/styles/override/_custom-control-input.sass
@@ -10,7 +10,7 @@
 
 .custom-control-input:focus ~ .custom-control-label::before
   border-color: $normal-gray
-  box-shadow: 0 0 0 0.2rem rgb(108 117 125 / 50%) !important
+  box-shadow: 0 0 0 0.2rem $normal-gray-muted !important
 
 .custom-control-input:checked ~ .custom-control-label::before
   border-color: $normal-gray
