--- a/dl4se-website/src/assets/styles/override/_input.sass
+++ b/dl4se-website/src/assets/styles/override/_input.sass
@@ -7,7 +7,7 @@ input[type=number]
   -moz-appearance: textfield
 
 input:focus, .form-control:focus
-  box-shadow: 0 0 0 0.2rem rgb(108 117 125 / 50%)
+  box-shadow: 0 0 0 0.2rem $normal-gray-muted
 
 %input
   @extend .form-control
