--- a/dl4se-website/src/assets/styles/override/_pagination.sass
+++ b/dl4se-website/src/assets/styles/override/_pagination.sass
@@ -1,5 +1,5 @@
 .page-link:focus
-  box-shadow: 0 0 0 0.2rem rgb(108 117 125 / 50%) !important
+  box-shadow: 0 0 0 0.2rem $normal-gray-muted !important
 
 .page-item .page-link
   min-width: 40px!important
@@ -21,12 +21,12 @@
   background-color: $normal-gray
 
 .page-item.disabled .page-link
-  color: rgb(108 117 125 / 50%)
-  background-color: rgb(230 230 230 / 50%)
+  color: $normal-gray-muted
+  background-color: $light-gray-muted
 
 .page-item.active .page-link
   background-color: $normal-gray
 
 .page-item.active.disabled .page-link
   color: rgb(255 255 255 / 50%)
-  background-color: rgb(108 117 125 / 50%)
+  background-color: $normal-gray-muted
