--- a/dl4se-website/src/assets/styles/override/_validation.sass
+++ b/dl4se-website/src/assets/styles/override/_validation.sass
@@ -2,7 +2,7 @@
 .was-validated .form-control:invalid:focus,
 .form-control.is-valid:focus,
 .form-control.is-invalid:focus
-  box-shadow: 0 0 0 0.2rem rgb(108 117 125 / 50%)
+  box-shadow: 0 0 0 0.2rem $normal-gray-muted
 
 .was-validated .form-control:invalid,
 .was-validated .form-control:valid,
