--- a/dl4se-website/src/assets/styles/override/_custom-control-input.sass
+++ b/dl4se-website/src/assets/styles/override/_custom-control-input.sass
@@ -29,3 +29,7 @@
 .custom-control-input-green:active:not(:disabled) ~ .custom-control-label::before
   border-color: $normal-gray
   background-color: $normal-gray
+
+.custom-checkbox > .custom-control-input:disabled + .custom-control-label
+  cursor: not-allowed!important
+  pointer-events: all!important
