Improved the styling for the `HomeView` card stack

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -65,6 +65,15 @@ body > footer
   @extend .border-2
   border-color: $dark-red!important
 
+.card-stack
+  min-height: 80vh!important
+  @extend .m-5
+  @extend .d-flex
+  @extend .flex-wrap
+  @extend .flex-column
+  @extend .align-content-center
+  @extend .justify-content-center
+
 .brand
   font-size: 1.65rem!important
   text-decoration: none!important
