Added missing class to `BarChart`

--- a/dl4se-website/src/assets/styles/component/_bar-chart.sass
+++ b/dl4se-website/src/assets/styles/component/_bar-chart.sass
@@ -1,3 +1,9 @@
+.bar-chart
+  @extend .mb-lg-5
+  @extend .mb-md-4
+  @extend .mb-sm-3
+  @extend .mb-3
+
 .bar-chart-title
-  @extend .my-2
+  @extend .mb-2
   @extend .text-center
