--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -5,21 +5,10 @@ $enable-responsive-font-sizes: true
 @import "variables"
 @import "mixins"
 @import "svg"
+@import "typography"
 @import "override"
 @import "extension"
 @import "component"
-
-@font-face
-  font-family: 'Trebuchet MS'
-  font-style: normal
-  font-weight: normal
-  src: local('Trebuchet MS'), url('@/assets/fonts/trebuc.woff') format('woff')
-
-@font-face
-  font-family: 'Inconsolata'
-  font-style: normal
-  font-weight: normal
-  src: local('Inconsolata'), url('@/assets/fonts/inconsolata.woff') format('woff')
 
 *
   margin: 0
@@ -101,37 +90,6 @@ body > footer
 .brand.active > .brand-positive
   color: $black!important
 
-.page-title
-  @extend .text-center
-  @extend .m-lg-5
-  @extend .m-md-4
-  @extend .m-sm-3
-  @extend .m-3
-
-.page-description
-  @extend .text-center
-  @extend .m-lg-5
-  @extend .m-md-4
-  @extend .m-sm-3
-  @extend .m-3
-  @extend .px-lg-5
-  @extend .px-md-4
-  @extend .px-sm-3
-  @extend .px-3
-
-.page-section
-  @extend .m-lg-5
-  @extend .m-md-4
-  @extend .m-sm-3
-  @extend .m-3
-
-.page-text
-  @extend .text-justify
-
-.page-list-item
-  margin-left: 25px!important
-  @extend .mb-2
-
 .task-create-form
   @extend .my-lg-5
   @extend .my-md-4
@@ -160,9 +118,3 @@ body > footer
   @extend .border-bottom
   @extend .border-dark
   @extend .font-weight-bold
-
-.text-regular
-  font-family: 'Trebuchet MS', Helvetica, Arial, sans-serif
-
-.text-monospace
-  font-family: 'Inconsolata', Helvetica, Arial, sans-serif
