First iteration of new `HomeView`

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -54,6 +54,40 @@ body > footer
   @extend .border-2
   border-color: $dark-red!important
 
+.logo
+  min-height: 80vh!important
+  @extend .m-5
+  @extend .d-flex
+  @extend .flex-column
+  @extend .justify-content-center
+
+.logo-image
+  font-size: 16vw!important
+  @extend .text-center
+
+.logo-image-negative
+  color: $white!important
+  background-color: $black!important
+  padding-left: 8vw!important
+  padding-right: 2vw!important
+
+.logo-image-positive
+  color: $black!important
+  padding-left: 1vw!important
+  font-weight: 200!important
+
+.logo-tagline
+  font-size: 3vw!important
+  @extend .text-center
+
+.logo-jump
+  font-size: 2vw!important
+  @extend .text-center
+
+.logo-jump-link
+  @extend .text-secondary
+  @extend .text-decoration-none
+
 .card-stack
   min-height: 80vh!important
   @extend .m-5
