Reduced verbosity of some SASS definitions

--- a/dl4se-website/src/assets/styles/extension/_border.sass
+++ b/dl4se-website/src/assets/styles/extension/_border.sass
@@ -1,4 +1,4 @@
-@each $size in 2, 3, 4, 5
+@for $size from 2 through 5
   .border-#{$size}
     border-width: $size+px!important
   .border-left-#{$size}
