Added special styling for the `lorem-ipsum` dev component

--- a/dl4se-website/src/assets/styles/_override.sass
+++ b/dl4se-website/src/assets/styles/_override.sass
@@ -3,6 +3,7 @@
 @import "override/disabled"
 @import "override/dropdown"
 @import "override/input"
+@import "override/lorem-ipsum"
 @import "override/navbar-toggle"
 @import "override/pagination"
 @import "override/progress"
