--- a/dl4se-website/src/assets/styles/component/_confirm-modal.sass
+++ b/dl4se-website/src/assets/styles/component/_confirm-modal.sass
@@ -1,13 +1,13 @@
-.confirm-dialog-body
+.confirm-modal-body
   @extend .text-justify
 
-.confirm-dialog-content
+.confirm-modal-content
   @extend .rounded-0
 
-.confirm-dialog-header
+.confirm-modal-header
   @extend .border-0
 
-.confirm-dialog-footer
+.confirm-modal-footer
   @extend .border-0
   @extend .flex-row-reverse
   @extend .justify-content-center
