Added the `DialogModal` component
Intended to act as a generic container for navigations. Similar to the
`DialogPage`, but in modal form.

--- a/dl4se-website/src/assets/styles/_component.sass
+++ b/dl4se-website/src/assets/styles/_component.sass
@@ -6,6 +6,7 @@
 @import "component/counter"
 @import "component/details-modal"
 @import "component/dialog"
+@import "component/dialog-modal"
 @import "component/dropdown-select"
 @import "component/footer"
 @import "component/masking"
