Fixed some naming inconsistencies

--- a/dl4se-website/src/assets/styles/_component.sass
+++ b/dl4se-website/src/assets/styles/_component.sass
@@ -5,8 +5,8 @@
 @import "component/content-area"
 @import "component/counter"
 @import "component/details-modal"
-@import "component/dialog"
 @import "component/dialog-modal"
+@import "component/dialog-page"
 @import "component/dropdown-select"
 @import "component/footer"
 @import "component/masking"
