--- a/dl4se-website/src/assets/styles/component/_dialog-page.sass
+++ b/dl4se-website/src/assets/styles/component/_dialog-page.sass
@@ -1,13 +1,19 @@
-.dialog
+.dialog-page
   @extend .text-center
 
-.dialog-container
+.dialog-page-title
+  @extend .page-title
+
+.dialog-page-description
+  @extend .page-description
+
+.dialog-page-container
   @extend .my-3
   @extend .my-sm-3
   @extend .my-md-4
   @extend .my-lg-5
 
-.dialog-column
+.dialog-page-column
   @extend .pb-3
   @extend .pb-sm-3
   @extend .pb-md-4
