Improved fullscreen styling for each separate homepage section

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -56,7 +56,12 @@ body > footer
   border-color: $dark-red!important
 
 .fullscreen
-  min-height: 95vh!important
+  &.logo
+    min-height: 95vh!important
+  &.summary
+    min-height: 100vh!important
+  &.datasets
+    min-height: 88vh!important
 
 .home
   @extend .d-flex
