Created the very first iteration of `TextCarousel` component

--- a/dl4se-website/src/assets/styles/_component.sass
+++ b/dl4se-website/src/assets/styles/_component.sass
@@ -15,4 +15,5 @@
 @import "component/range"
 @import "component/smart-navbar"
 @import "component/tag-select"
+@import "component/text-carousel"
 @import "component/text-input-form"
