Added a mixin for brightness filter

--- a/dl4se-website/src/assets/styles/_mixins.sass
+++ b/dl4se-website/src/assets/styles/_mixins.sass
@@ -1,3 +1,6 @@
+@mixin brightness($percentage)
+  filter: brightness(#{$percentage+'%'})!important
+
 @mixin min-width($pixels)
   min-width: $pixels+px!important
 
