--- a/dl4se-website/src/assets/styles/component/_back-to-top.sass
+++ b/dl4se-website/src/assets/styles/component/_back-to-top.sass
@@ -6,6 +6,7 @@
 
 .back-to-top-btn
   padding: 0.375rem
+  @include brightness(95)
   @include fixed-width(40)
   @include fixed-height(40)
   @extend .bg-light-gray
