Improved styling for the dataset cards

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -106,6 +106,16 @@ body > footer
   @extend .align-content-center
   @extend .justify-content-center
 
+.datasets-card
+  @include max-width(500)
+  @extend .bg-light-gray
+  @extend .border-secondary
+  @extend .border-left-0
+  @extend .border-top-0
+  @extend .border-right-0
+  @extend .rounded-0
+
+
 .brand
   font-size: 1.65rem!important
   text-decoration: none!important
