--- a/dl4se-website/src/assets/styles/_component.sass
+++ b/dl4se-website/src/assets/styles/_component.sass
@@ -1,5 +1,6 @@
 @import "component/back-to-top"
 @import "component/bar-chart"
+@import "component/clearable-input"
 @import "component/config-table"
 @import "component/confirm-modal"
 @import "component/content-area"
