Added filters for the `Task` and `User` tables in `DashboardView`

--- a/dl4se-website/src/assets/styles/component/_paginated-table.sass
+++ b/dl4se-website/src/assets/styles/component/_paginated-table.sass
@@ -40,6 +40,19 @@
   @include min-width(80)
   @extend .mb-3
 
+.paginated-table-input
+  padding-right: calc(1.5em + 0.75rem)!important
+  @include fixed-height(40)
+  @extend .form-control
+  @extend .bg-light-gray
+  @extend .border-secondary
+  @extend .border-bottom
+  @extend .border-left-0
+  @extend .border-top-0
+  @extend .border-right-0
+  @extend .rounded-0
+  @extend .mb-3
+
 .paginated-table-border
   @extend .border-secondary
   @extend .border-bottom
