--- a/dl4se-server/src/main/resources/templates/verification.html
+++ b/dl4se-server/src/main/resources/templates/verification.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </head>
