Inline email CSS for task notification
Email is notorious for inconsistent CSS support, which is why you
should always inline your CSS.

--- a/dl4se-server/src/main/resources/templates/task_notification.html
+++ b/dl4se-server/src/main/resources/templates/task_notification.html
@@ -2,7 +2,44 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link rel="stylesheet" th:href="@{table.css}" />
+        <style>
+            .tg {
+                border-collapse: collapse;
+                border-spacing: 0;
+            }
+
+            .tg td {
+                border-color: black;
+                border-style: solid;
+                border-width: 1px;
+                font-size: 14px;
+                overflow: hidden;
+                padding: 10px 5px;
+                word-break: normal;
+            }
+
+            .tg th {
+                border-color: black;
+                border-style: solid;
+                border-width: 1px;
+                font-size: 14px;
+                font-weight: normal;
+                overflow: hidden;
+                padding: 10px 5px;
+                word-break: normal;
+            }
+
+            .tg .tg-4lcc {
+                font-weight: bold;
+                text-align: left;
+                vertical-align: top
+            }
+
+            .tg .tg-qxrv {
+                text-align: left;
+                vertical-align: top
+            }
+        </style>
     </head>
     <body>
         <p>Task execution digest:</p>
