Add missing `title` tags to `head` of each email

--- a/dl4se-server/src/main/resources/templates/password_reset.html
+++ b/dl4se-server/src/main/resources/templates/password_reset.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
     <head>
+        <title>Reset your password</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </head>
     <body>
