--- a/dl4se-server/src/main/resources/templates/task_notification.html
+++ b/dl4se-server/src/main/resources/templates/task_notification.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
     <head>
+        <title th:text="|Task [${uuid}]: ${status}|"/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <style>
             .tg {
