--- a/dl4se-server/src/main/resources/templates/verification.html
+++ b/dl4se-server/src/main/resources/templates/verification.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
     <head>
+        <title>Complete your registration</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </head>
     <body>
