Use metamodel attributes as keys for email templating

--- a/dl4se-server/src/main/resources/templates/task_notification.html
+++ b/dl4se-server/src/main/resources/templates/task_notification.html
@@ -68,7 +68,7 @@
             </tr>
             <tr>
                 <td class="tg-4lcc">Results</td>
-                <td class="tg-qxrv" th:text="${results}"/>
+                <td class="tg-qxrv" th:text="${processedResults}"/>
             </tr>
             <tr th:if="${size != null}">
                 <td class="tg-4lcc">Size</td>
