Remove mentions of "DL4SE" in the closing line of emails

--- a/dl4se-server/src/main/resources/templates/password_reset.html
+++ b/dl4se-server/src/main/resources/templates/password_reset.html
@@ -25,7 +25,7 @@
         <p>If you have not requested a password reset, feel free to ignore this email. Your current password will remain unchanged.</p>
         <p>
             Regards, <br/>
-            The DL4SE team
+            The Software Analytics Research Team
         </p>
     </body>
 </html>
