--- a/dl4se-server/src/main/resources/templates/verification.html
+++ b/dl4se-server/src/main/resources/templates/verification.html
@@ -24,7 +24,7 @@
         <p>The link remains valid for the next 24 hours.</p>
         <p>
             Regards, <br/>
-            The DL4SE team
+            The Software Analytics Research Team
         </p>
     </body>
 </html>
