Restructure emails and change contents a bit

--- a/dl4se-server/src/main/resources/templates/password_reset.html
+++ b/dl4se-server/src/main/resources/templates/password_reset.html
@@ -19,13 +19,18 @@
         </style>
     </head>
     <body>
-        <p>Forgot your password? Happens to the best of us!</p>
-        <p>You can reset your password by clicking <a th:href="${link}">this link</a>.</p>
-        <p>The link remains valid for the next 15 minutes.</p>
-        <p>If you have not requested a password reset, feel free to ignore this email. Your current password will remain unchanged.</p>
-        <p>
-            Regards, <br/>
-            The Software Analytics Research Team
-        </p>
+        <main>
+            <p>
+                Forgot your password? Happens to the best of us!
+                You can reset your password by clicking <a th:href="${link}">this link</a>.
+                The link will remain active for the next 15 minutes.
+                If you didn't request this change, you can safely ignore this email.
+                Your current password will remain unchanged.
+            </p>
+            <p>
+                Regards, <br/>
+                The Software Analytics Research Team
+            </p>
+        </main>
     </body>
 </html>
