--- a/dl4se-server/src/main/resources/templates/verification.html
+++ b/dl4se-server/src/main/resources/templates/verification.html
@@ -19,12 +19,17 @@
         </style>
     </head>
     <body>
-        <p>Welcome! You have successfully created your account.</p>
-        <p>Please validate your email address by clicking <a th:href="${link}">this link</a>.</p>
-        <p>The link remains valid for the next 24 hours.</p>
-        <p>
-            Regards, <br/>
-            The Software Analytics Research Team
-        </p>
+        <main>
+            <p>
+                Welcome aboard! We're thrilled to have you join us.
+                You have successfully created your account.
+                To get started, please verify your email address by clicking <a th:href="${link}">this link</a>.
+                The link will remain active for the next 24 hours.
+            </p>
+            <p>
+                Regards, <br/>
+                The Software Analytics Research Team
+            </p>
+        </main>
     </body>
 </html>
