Link platform dashboard when sending task status notifications

--- a/dl4se-server/src/main/resources/templates/task_notification.html
+++ b/dl4se-server/src/main/resources/templates/task_notification.html
@@ -90,6 +90,10 @@
                 </tr>
                 </tbody>
             </table>
+            <p>
+                To download the generated dataset, please visit the
+                <a th:href="${@uriBuilder.path('/dashboard').build('').toURL()}">platform dashboard</a>.
+            </p>
         </main>
     </body>
 </html>
