Add closing line to task notification

--- a/dl4se-server/src/main/resources/templates/task_notification.html
+++ b/dl4se-server/src/main/resources/templates/task_notification.html
@@ -94,6 +94,10 @@
                 To download the generated dataset, please visit the
                 <a th:href="${@uriBuilder.path('/dashboard').build('').toURL()}">platform dashboard</a>.
             </p>
+            <p>
+                Regards, <br/>
+                The Software Analytics Research Team
+            </p>
         </main>
     </body>
 </html>
