Add paragraph for contacting support

--- a/dl4se-server/src/main/resources/templates/verification.html
+++ b/dl4se-server/src/main/resources/templates/verification.html
@@ -26,6 +26,10 @@
                 The link will remain active for the next 24 hours.
             </p>
             <p>
+                If you have any questions or need further assistance, feel free to contact our
+                <a th:href="|mailto:${@environment.getProperty('spring.mail.username')}|">support team</a>.
+            </p>
+            <p>
                 Regards, <br/>
                 The Software Analytics Research Team
             </p>
