--- a/dl4se-server/src/main/resources/templates/password_reset.html
+++ b/dl4se-server/src/main/resources/templates/password_reset.html
@@ -28,6 +28,10 @@
                 Your current password will remain unchanged.
             </p>
             <p>
+                If you have any questions or need further assistance, feel free to contact our
+                <a th:href="|mailto:${@environment.getProperty('spring.mail.username')}|">support team</a>.
+            </p>
+            <p>
                 Regards, <br/>
                 The Software Analytics Research Team
             </p>
