--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -56,7 +56,7 @@ body > footer
   border-color: $dark-red!important
 
 .fullscreen
-  &.logo
+  &.branding
     min-height: 95vh!important
   &.summary
     min-height: 100vh!important
@@ -72,21 +72,21 @@ body > footer
   @extend .text-secondary
   @extend .text-decoration-none
 
-.logo
+.branding
   @extend .d-flex
   @extend .flex-column
   @extend .justify-content-center
 
-.logo-image
+.branding-image
   font-size: clamp(6rem, 24vw, 8rem)!important
 
-.logo-image-negative
+.branding-image-negative
   color: $white!important
   background-color: $black!important
   padding-left: clamp(2rem, 8vw, 4rem)!important
   padding-right: clamp(0.5rem, 2vw, 1rem)!important
 
-.logo-image-positive
+.branding-image-positive
   color: $black!important
   padding-left: clamp(0.25rem, 1vw, 0.5rem)!important
   font-weight: 200!important
