Create `Logo` component for SEART

--- a/dl4se-website/src/assets/styles/_component.sass
+++ b/dl4se-website/src/assets/styles/_component.sass
@@ -10,6 +10,7 @@
 @import "component/dialog-page"
 @import "component/dropdown-select"
 @import "component/footer"
+@import "component/logo"
 @import "component/masking"
 @import "component/monitor"
 @import "component/paginated-table"
