Improvements to font application

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -14,6 +14,9 @@ $enable-responsive-font-sizes: true
 *
   margin: 0
   padding: 0
+  font-family: "Trebuchet MS", Helvetica, Arial, sans-serif!important
+  font-style: normal!important
+  font-variant: normal!important
 
 html
   position: relative
