Use `crosshair` cursor on `canvas` elements

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -21,6 +21,9 @@ $enable-responsive-font-sizes: true
 html
   position: relative
 
+canvas
+  cursor: crosshair
+
 .bg-light-gray
   background-color: $light-gray
 
