--- a/dl4se-website/src/assets/styles/component/_confirm-modal.sass
+++ b/dl4se-website/src/assets/styles/component/_confirm-modal.sass
@@ -1,22 +1,24 @@
 .confirm-modal-body
-  @extend .text-justify
+  text-align: justify!important
 
 .confirm-modal-content
-  @extend .rounded-0
+  border-radius: 0!important
 
 .confirm-modal-header
-  @extend .border-0
+  border: 0!important
 
 .confirm-modal-footer
-  @extend .border-0
-  @extend .flex-row-reverse
-  @extend .justify-content-center
+  border: 0!important
+  flex-direction: row-reverse!important
+  justify-content: center!important
 
   .btn
-    @extend .border-2
+    border-width: 2px!important
+
+  $percentage: 25%
 
   .btn-danger
-    border-color: $dark-red
+    border-color: darken($red, $percentage)!important
 
   .btn-secondary
-    border-color: $dark-gray
+    border-color: darken($gray-600, $percentage)!important
