Remove all margins from `ContentArea`

--- a/dl4se-website/src/assets/styles/component/content-area.sass
+++ b/dl4se-website/src/assets/styles/component/content-area.sass
@@ -2,6 +2,7 @@
 @import "node_modules/bootstrap/scss/_variables.scss"
 
 .content-area
+  margin: 0!important
   padding: map-get($spacers, 4)!important
   border-radius: 0!important
   border-bottom: 1px solid gray("600")!important
