--- a/dl4se-website/src/assets/styles/component/config-table.sass
+++ b/dl4se-website/src/assets/styles/component/config-table.sass
@@ -3,8 +3,8 @@
 
 $header-row-height: 50px
 $body-row-height: 64px
-$input-min-width: 150px
-$input-max-width: 500px
+$input-min-width: 100px
+$input-max-width: $input-min-width * 3.5
 $button-height: 40px
 
 th, td
