--- a/dl4se-website/src/assets/styles/view/admin.sass
+++ b/dl4se-website/src/assets/styles/view/admin.sass
@@ -1,7 +1,5 @@
 @import "node_modules/bootstrap/scss/_functions.scss"
 @import "node_modules/bootstrap/scss/_variables.scss"
-@import "node_modules/bootstrap/scss/_mixins.scss"
-@import "node_modules/bootstrap/scss/_grid.scss"
 
 .content-area
   $percentage: 25%
@@ -15,7 +13,5 @@
   .btn.btn-secondary
     border-color: darken(map-get($theme-colors, "secondary"), $percentage)!important
 
-@include media-breakpoint-up(md)
-  .content-area
-    .btn:not(:last-child)
-      margin-right: map-get($spacers, 4)!important
+  .btn.btn-primary
+    border-color: darken(map-get($theme-colors, "primary"), $percentage)!important
