Address SASS deprecation warnings

--- a/dl4se-website/src/assets/styles/component/logo.sass
+++ b/dl4se-website/src/assets/styles/component/logo.sass
@@ -7,8 +7,8 @@ a
     color: gray("200")!important
     background-color: gray("600")!important
     padding-left: map-get($spacers, 2)!important
-    padding-right: map-get($spacers, 1) / 2!important
-    margin-right: map-get($spacers, 1) / 2!important
+    padding-right: calc(map-get($spacers, 1) / 2)!important
+    margin-right: calc(map-get($spacers, 1) / 2)!important
   span:last-child
     color: gray("600")!important
 
