Make styling for forms global

--- a/dl4se-website/src/assets/styles/_override.sass
+++ b/dl4se-website/src/assets/styles/_override.sass
@@ -3,6 +3,7 @@
 @import "override/custom-control-input"
 @import "override/disabled"
 @import "override/dropdown"
+@import "override/form"
 @import "override/input"
 @import "override/navbar-toggle"
 @import "override/pagination"
