--- a/dl4se-website/src/assets/styles/view/_form-page.sass
+++ b/dl4se-website/src/assets/styles/view/_form-page.sass
@@ -1,17 +1,14 @@
 @import "node_modules/bootstrap/scss/_functions.scss"
 @import "node_modules/bootstrap/scss/_variables.scss"
 
-$width: 290px
+form
+  $width: 290px
 
-.form-row
-  justify-content: center!important
+  input
+    width: $width!important
 
-input.form-control
-  width: $width!important
-  background-color: gray("200")!important
-  border-color: gray("600")!important
-  border-radius: 0!important
-  border-width: 0 0 1px 0!important
+  .form-text
+    width: $width!important
 
-.form-text
-  width: $width!important
+  .form-row
+    justify-content: center!important
