--- a/dl4se-website/src/assets/styles/component/details-modal.sass
+++ b/dl4se-website/src/assets/styles/component/details-modal.sass
@@ -1,12 +1,9 @@
 @import "node_modules/bootstrap/scss/_functions.scss"
 @import "node_modules/bootstrap/scss/_variables.scss"
+@import "@/assets/styles/mixins"
 
 pre
   margin: 0!important
 
 footer
-  .btn
-    border-width: 2px!important
-
-  .btn.btn-secondary
-    border-color: darken(map-get($theme-colors, "secondary"), 25%)!important
+  @include btn-accent
