--- a/dl4se-website/src/assets/styles/override/_form.sass
+++ b/dl4se-website/src/assets/styles/override/_form.sass
@@ -8,9 +8,4 @@ form
     border-radius: 0!important
     border-width: 0 0 1px 0!important
 
-  button[type="submit"]
-    border-width: 2px!important
-
-  @each $color, $value in $theme-colors
-     button[type="submit"].btn-#{$color}
-        border-color: darken($value, 25%)!important
+  @include btn-accent("button[type=submit]")
